# textmagus

./: .gitignore  .gitmodules  .travis.yml  .travis_build.sh  CMakeLists.txt  README.md  configure
